--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,6 +1,5 @@
 .container {
-    max-width: 1130px;
-    width: 100%;
+    width: 1140px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
