--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     gap: 20px; //в макете 40
     margin-top: 25px;
-    margin: 30px 0px 0 -10px;
+    margin: 30px 0px 0 0px;
     row-gap: 40px;
+    justify-content: center;
 }
