--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 body {
   height: 100%;
   background-color: #000000;
+  background-image: url("./assets/img/1526027.jpg");
   margin: 0;
   font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
