--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -6,8 +6,9 @@
     flex: 1 0 auto;
     row-gap: 72px;
     padding: 0px 5px 0;
-}
-
+    box-shadow: 0 0 50px rgba(0, 0, 0, 1);
+    overflow: hidden;
+  }
 
 
 .dark{
