--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,13 @@
 body {
   height: 100%;
-  background-color: #000000;
-  background-image: url("./assets/img/1526027.jpg");
+  background-color: #1a023d;
+  background-image: url("./assets/img/step_background (6).png");
   margin: 0;
   font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-repeat: no-repeat;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
