--- a/src/pages/SignInPage/SignInPage.scss
+++ b/src/pages/SignInPage/SignInPage.scss
@@ -46,4 +46,13 @@
     position: absolute;
     left: 30px;
     top: 20px;
+    width: 50px;
+}
+
+.logo-title {
+    position: relative;
+    left: 60px;
+    bottom: 40px;
+    width: 180px;
+    font-size: 30px
 }
