--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -12,7 +12,7 @@
 
 
 .dark{
-    color: #000;
+    color: #0f0124;
     background-color: #fff;
 
     svg {
@@ -28,7 +28,7 @@
 
 .light {
     color: #fff;
-    background-color: #000;
+    background-color: #0f0124;
 
     svg {
         path {
