--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -28,8 +28,10 @@
     }
 }
 
-.mainLogo {
-    position: absolute;
-    left: 30px;
-    top: 20px;
-}
+// .mainLogo {
+//     position: absolute;
+//     left: 30px;
+//     top: 20px;
+//     width: 50px;
+//         height: 50px;
+// }
