--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -29,3 +29,23 @@ h3.card-title {
     font-size: 16px;
     padding-bottom: 5px;
 }
+
+.add-favorite-button {
+  background-color: green; 
+  color: white; 
+}
+
+.remove-favorite-button {
+  background-color: red; 
+  color: white; 
+}
+
+.already-favorite-button {
+  background-color: gray; 
+  color: white;
+}
+
+.add-favorite-button.already-favorite {
+  background-color: gray;
+  color: white;
+}
