--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  
+  background-color: #0f0124;
     &__box {
       display: flex;
       align-items: center;
