--- a/src/components/FavoriteModal/FavoriteModal.scss
+++ b/src/components/FavoriteModal/FavoriteModal.scss
@@ -8,9 +8,12 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    
   
     .modal-content {
       background-color: white;
+      border-radius: 8px;
       padding: 20px;
       text-align: center;
   
