--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -20,7 +20,7 @@
   
     .header__box svg {
       path {
-        fill: #000;
+        fill: #000000;
       }
     }
 
@@ -31,7 +31,7 @@
   
   .light {
     color: #fff;
-    background-color: #0f0124;
+    background-color: #2e2c31;
   
     svg {
       path {
