--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -8,6 +8,11 @@
   flex: 1 0 auto;
   row-gap: 72px;
   box-shadow: 0 0 50px rgba(0, 0, 0, 1);
+
+  @media (max-width: 1200px) {
+    width: 100%;
+    padding: 0 20px;
+  }
 }
 
   .dark {
@@ -31,7 +36,7 @@
   
   .light {
     color: #fff;
-    background-color: #2e2c31;
+    background-color: #0f0124;
   
     svg {
       path {
