--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -16,7 +16,7 @@
                 background-color: #917CFF;
             }
         }
-    
+
         &.disabled {
             background-color: #e8e8e8;
             cursor: not-allowed;
@@ -57,6 +57,5 @@
         }
     }
 
-    &.dark {
-    }
+    &.dark {}
 }
