--- a/src/components/MainPageFilms/Movies/MovieInfo.scss
+++ b/src/components/MainPageFilms/Movies/MovieInfo.scss
@@ -8,8 +8,8 @@
       width: 800px;
       padding-bottom: 40px;
     }
-    h1 {
-    }
+
+    h1 {}
 
     h2 {
       color: #afb2b6;
@@ -21,6 +21,7 @@
         list-style-type: none;
       }
     }
+
     .movie-rating {
       display: flex;
       gap: 10px;
@@ -31,6 +32,7 @@
         background-color: #00a340;
       }
     }
+
     span {
       background: #323537;
       border-radius: 6px;
@@ -43,6 +45,7 @@
       font-size: 16px;
       line-height: 24px;
     }
+
     &--genres {
       display: flex;
       gap: 54px;
@@ -55,6 +58,7 @@
     }
   }
 }
+
 .loader {
   --path: #2f3545;
   --dot: #5628ee;
@@ -76,14 +80,15 @@
     top: 37px;
     left: 19px;
     transform: translate(-18px, -18px);
-    animation: dotRect var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86)
-      infinite;
+    animation: dotRect var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
   }
+
   svg {
     display: block;
 
     width: 100%;
     height: 100%;
+
     rect,
     polygon,
     circle {
@@ -93,31 +98,33 @@
       stroke-linejoin: round;
       stroke-linecap: round;
     }
+
     polygon {
       stroke-dasharray: 145 (221 - 145) 145 (221 - 145);
       stroke-dashoffset: 0;
-      animation: pathTriangle var(--duration)
-        cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
+      animation: pathTriangle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
     }
+
     rect {
       stroke-dasharray: (256 / 4 * 3) (256 / 4) (256 / 4 * 3) (256 / 4);
       stroke-dashoffset: 0;
       animation: pathRect 3s cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
     }
+
     circle {
       stroke-dasharray: (200 / 4 * 3) (200 / 4) (200 / 4 * 3) (200 / 4);
       stroke-dashoffset: 75;
-      animation: pathCircle var(--duration)
-        cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
+      animation: pathCircle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
     }
   }
+
   &.triangle {
     width: 48px;
+
     &:before {
       left: 21px;
       transform: translate(-10px, -18px);
-      animation: dotTriangle var(--duration)
-        cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
+      animation: dotTriangle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
     }
   }
 }
@@ -126,9 +133,11 @@
   33% {
     stroke-dashoffset: 74;
   }
+
   66% {
     stroke-dashoffset: 147;
   }
+
   100% {
     stroke-dashoffset: 221;
   }
@@ -138,9 +147,11 @@
   33% {
     transform: translate(0, 0);
   }
+
   66% {
     transform: translate(10px, -18px);
   }
+
   100% {
     transform: translate(-10px, -18px);
   }
@@ -157,11 +168,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
   .dribbble {
     position: fixed;
     display: block;
     right: 20px;
     bottom: 20px;
+
     img {
       display: block;
       height: 28px;
