--- a/src/pages/SearchPage/SearchPage.scss
+++ b/src/pages/SearchPage/SearchPage.scss
@@ -4,14 +4,14 @@
   
   .previous-button {
     position: absolute;
-    top: 410px;
-    left: -70px
+    left: 135px;
+    bottom: 180px;
   }
   
   .next-button {
     position: absolute;
-    right: -70px;
-    top: 410px;
+    right: 135px;
+    bottom: 180px;
   }
   
   .pagination-button {
