--- a/src/components/MainPageFilms/Movies/MovieInfo.scss
+++ b/src/components/MainPageFilms/Movies/MovieInfo.scss
@@ -68,65 +68,69 @@
   position: fixed;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
 
-  &:before {
-    content: "";
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    position: absolute;
-    display: block;
-    background: var(--dot);
-    top: 37px;
-    left: 19px;
-    transform: translate(-18px, -18px);
-    animation: dotRect var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
-  }
+.loader:before {
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  position: absolute;
+  display: block;
+  background: var(--dot);
+  top: 37px;
+  left: 19px;
+  transform: translate(-18px, -18px);
+  animation: dotRect var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
+}
 
-  svg {
-    display: block;
+.loader svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 
-    width: 100%;
-    height: 100%;
+.loader rect,
+.loader polygon,
+.loader circle {
+  fill: none;
+  stroke: var(--path);
+  stroke-width: 10px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+}
 
-    rect,
-    polygon,
-    circle {
-      fill: none;
-      stroke: var(--path);
-      stroke-width: 10px;
-      stroke-linejoin: round;
-      stroke-linecap: round;
-    }
+.loader polygon {
+  stroke-dasharray: 145 (221 - 145) 145 (221 - 145);
+  stroke-dashoffset: 0;
+  animation: pathTriangle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
+}
 
-    polygon {
-      stroke-dasharray: 145 (221 - 145) 145 (221 - 145);
-      stroke-dashoffset: 0;
-      animation: pathTriangle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
-    }
+.loader rect {
+  stroke-dasharray: calc(256 / 4 * 3) (256 / 4) calc(256 / 4 * 3) (256 / 4);
+  stroke-dashoffset: 0;
+  animation: pathRect var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
+}
 
-    rect {
-      stroke-dasharray: (256 / 4 * 3) (256 / 4) (256 / 4 * 3) (256 / 4);
-      stroke-dashoffset: 0;
-      animation: pathRect 3s cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
-    }
+.loader circle {
+  stroke-dasharray: calc(200 / 4 * 3) (200 / 4) calc(200 / 4 * 3) (200 / 4);
+  stroke-dashoffset: 75;
+  animation: pathCircle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
+}
 
-    circle {
-      stroke-dasharray: (200 / 4 * 3) (200 / 4) (200 / 4 * 3) (200 / 4);
-      stroke-dashoffset: 75;
-      animation: pathCircle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
-    }
-  }
+.loader.triangle {
+  width: 48px;
+}
 
-  &.triangle {
-    width: 48px;
-
-    &:before {
-      left: 21px;
-      transform: translate(-10px, -18px);
-      animation: dotTriangle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
-    }
-  }
+.loader.triangle:before {
+  left: 21px;
+  transform: translate(-10px, -18px);
+  animation: dotTriangle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
 }
 
 @keyframes pathTriangle {
@@ -155,11 +159,6 @@
   100% {
     transform: translate(-10px, -18px);
   }
-}
-
-.loader {
-  display: inline-block;
-  margin: 0 16px;
 }
 
 body {
