--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -12,6 +12,7 @@
     position: absolute;
     top: 84px;
     left: 0;
+    padding-left: 50px;
     z-index: 100;
     width: 236px;
     height: 450px;
