--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@ body {
   background-color: #1a023d;
   background-image: url("./assets/img/step_background (6).png");
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-repeat: no-repeat;
