--- a/src/pages/SearchPage/SearchPage.scss
+++ b/src/pages/SearchPage/SearchPage.scss
@@ -4,14 +4,14 @@
   
   .previous-button {
     position: absolute;
-    left: 135px;
-    bottom: 180px;
+    left: 45%;
+    bottom: 60px;
   }
   
   .next-button {
     position: absolute;
-    right: 135px;
-    bottom: 180px;
+    right: 45%;
+    bottom: 60px;
   }
   
   .pagination-button {
