--- a/src/components/MainPageFilms/Movies.scss
+++ b/src/components/MainPageFilms/Movies.scss
@@ -7,7 +7,8 @@
       margin: 30px 0 0 0;
       row-gap: 40px;
       gap: 20px;
-      justify-content: center;
+      justify-content: flex-start;
+      margin-left: 30px;
     }
   
     &-bottom {
