--- a/src/pages/SettingsPage/SettingsPage.scss
+++ b/src/pages/SettingsPage/SettingsPage.scss
@@ -3,13 +3,13 @@
     &__form-profile {
         display: flex;
         width: 100%;
-        height: 170px;
-        background-color: #242426;
+        height: 100;
+        // background-color: #242426;
         border-radius: 10px;
         color: #fff;
         align-items: center;
         column-gap: 40px;
-        padding: 72px 40px;
+        padding: 20px 40px;
         margin-bottom: 40px;
     }
 
@@ -34,6 +34,7 @@
 
     &_btn {
         display: flex;
+        margin: 0 auto;
         width: 266px;
         height: 56px;
         justify-content: center;
