--- a/src/pages/MoviePage/MoviePage.scss
+++ b/src/pages/MoviePage/MoviePage.scss
@@ -34,7 +34,7 @@
     }
 
     span {
-      background: #323537;
+      background: #dd2929;
       border-radius: 6px;
       padding: 2px 8px;
       color: #ffffff;
