--- a/src/components/common/ShowMoreButton/ShowMoreButton.scss
+++ b/src/components/common/ShowMoreButton/ShowMoreButton.scss
@@ -3,9 +3,10 @@
     color:white;
     display: inline-flex;
     align-items: center;
-    background: #323537;
-    border-radius: 0px;
-    column-gap: 15px;
+    background: rgba(255, 255, 255, 0.08);
+    border-radius: 8px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10.4px);
     min-height: 40px;
     padding: 0 24px;
     cursor: pointer;
