upd: theme style fix

--- a/src/components/Layouts/BurgerMenu/BurgerMenu.scss
+++ b/src/components/Layouts/BurgerMenu/BurgerMenu.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   border: none;
-  background-color: #0f0124;
+  background-color: #0f012400;
   overflow: hidden;
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
@@ -11,9 +11,9 @@
   &__content {
     position: absolute;
     top: 0;
-    width: 1170px;
+    width: 1171px;
     height: 0;
-    background-color: #0f0124;
+    background-color: rgb(22 4 44);
     z-index: 100;
     overflow: hidden;
     transition: height 0.3s ease-in-out;
