--- a/src/pages/MoviePage/MoviePage.scss
+++ b/src/pages/MoviePage/MoviePage.scss
@@ -2,6 +2,7 @@
   display: flex;
   width: max-content;
   gap: 42px;
+  margin: 0 auto;
 
   .movie-info {
     &--plot {
@@ -86,5 +87,4 @@ body {
   margin-top: 20px;
   display: flex;
   justify-content: center;
-  gap: 10px;
 }
