--- a/src/pages/MoviePage/RelatedMovies/RelatedMovies.scss
+++ b/src/pages/MoviePage/RelatedMovies/RelatedMovies.scss
@@ -51,6 +51,7 @@
   &--img {
     width: 266px;
     height: 357px;
+    border-radius: 10px;
   }
 }
 
@@ -59,5 +60,24 @@
 .related-title {
   text-align: center;
   margin-bottom: 15px;
+}
+
+.related-movie__genre {
+  text-align: center;
+  font-size: 14px;
+  opacity: 0.7;
+}
+
+
+.related-movie__title {
+  font-size: 16px;
+    margin: 4px;
+    text-align: center;
+}
+
+
+.related-movie__year {
+  font-size: 14px;
+  text-align: center;
 }
 
