--- a/src/pages/MoviePage/MoviePage.scss
+++ b/src/pages/MoviePage/MoviePage.scss
@@ -1,16 +1,26 @@
+body {
+  min-height: 100vh;
+  background: #f5f9ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+}
+
 .movie-details {
   display: flex;
   width: max-content;
   gap: 42px;
+  width: 1100px;
   margin: 0 auto;
+  margin-top: 30px;
 
   .movie-info {
     &--plot {
-      width: 800px;
-      padding-bottom: 40px;
+      width: 600px;
     }
 
-    h1 {}
+    
 
     h2 {
       color: #afb2b6;
@@ -35,39 +45,23 @@
     }
 
     span {
-      background: #dd2929;
-      border-radius: 6px;
       padding: 2px 8px;
-      color: #ffffff;
+      background: rgb(255 255 255 / 19%);
+      border-radius: 16px;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(10.4px);
 
-      font-family: "Exo 2";
-      font-style: normal;
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 24px;
+     
     }
 
     &--genres {
       display: flex;
       gap: 54px;
-      line-height: 24px;
-      font-family: "Exo 2";
-      font-style: normal;
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 24px;
+
     }
   }
 }
 
-
-
-body {
-  min-height: 100vh;
-  background: #f5f9ff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   .dribbble {
     position: fixed;
@@ -80,11 +74,16 @@ body {
       height: 28px;
     }
   }
-}
+
 
 
 .share-buttons {
   margin-top: 20px;
   display: flex;
   justify-content: center;
+}
+
+.subline {
+  color: white;
+  font-weight: 200;
 }
