--- a/src/pages/SearchPage/SearchPage.scss
+++ b/src/pages/SearchPage/SearchPage.scss
@@ -1,5 +1,7 @@
 .movies-container {
   position: relative;
+  align-content: space-between;
+  justify-content: space-around;
 }
 
 .previous-button {
