--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -1,7 +1,8 @@
 .card {
   padding: 20px;
   transition: transform 0.3s ease;
-  height: 100%;
+  width: 260px;
+  height: 430px;
   position: relative;
   overflow: hidden;
   margin-left: 14px;
