fix: form styles

--- a/src/components/Layouts/BurgerMenu/BurgerMenu.scss
+++ b/src/components/Layouts/BurgerMenu/BurgerMenu.scss
@@ -56,9 +56,12 @@
     font-weight: 600;
     cursor: pointer;
     color: #fff;
+    transition: transform 0.3s ease;
 
     &:hover {
       color: #6113c7;
+      
+      transform: scale(1.1);
     }
   }
 
