--- a/src/components/common/Input/Input.scss
+++ b/src/components/common/Input/Input.scss
@@ -12,14 +12,14 @@
 
     .input {
         width: 100%;
-        height: 20px;
+        height: 45px;
         padding: 0 20px;
         border-radius: 10px;
         border: 2px solid #fff;
         outline: none;
-        font-size: 16px;
+        font-size: 20px;
         font-weight: 400;
-        background-color: #323537;
+        background-color: rgba(255, 255, 255, 0.08);
         color: #fff;
 
         &:focus {
