--- a/src/pages/FavoritesPage/FavoritesPage.scss
+++ b/src/pages/FavoritesPage/FavoritesPage.scss
@@ -15,7 +15,7 @@
   text-align: center;
   font-size: 24px;
   color: #000;
-  margin-top: 20px;
+  margin-top: 30%;
 
   .jumping-words {
     display: inline-block;
