--- a/src/components/Layouts/Header/Header.scss
+++ b/src/components/Layouts/Header/Header.scss
@@ -51,8 +51,13 @@
     opacity: 0.5;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 1200px) {
     width: 100%;
+    margin-left: 0;
+  }
+
+  @media (max-width: 768px) {
+    margin-left: 0;
   }
 }
 
