--- a/src/pages/MoviePage/RelatedMovies/RelatedMovies.scss
+++ b/src/pages/MoviePage/RelatedMovies/RelatedMovies.scss
@@ -40,10 +40,11 @@
 
 .movie-poster {
   &--img {
-    width: 100%;
     box-shadow: 15px 11px 30px -8px rgba(0, 0, 0, 0.42);
     border-radius: 10px;
-    height: 428px;
+    height: auto;
+    width: 280px;
+    margin-left: 14px;
   }
 }
 
@@ -59,6 +60,7 @@
   text-align: center;
   font-size: 14px;
   opacity: 0.7;
+  margin-top: 10px;
 }
 
 
