--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -17,9 +17,9 @@
     margin: 0;
   }
 
-  .related-movies {
-    display: none;
-  }
+  // .related-movies {
+  //   display: none;
+  // }
 }
 
 
@@ -45,6 +45,30 @@
   .movies-container {
     justify-content: space-evenly;
   }
+.fav-movies-container {
+  justify-content: space-around;
+}
+
+.card {
+  background: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5));
+  width: 260px;
+  margin: 0 auto;
+  &:hover {
+    transform: none;
+    box-shadow: none;
+  }
+  
+  
+  &::before {
+    opacity: 1;
+    background: none;
+  }
+    
+  & img:hover {
+    filter: none;
+  }
+  }
+}
 
  .share-buttons {
   gap: 15px;
@@ -59,7 +83,7 @@
   .logo_title {
     display: none;
   }
-}
+
 
 @media (max-width: 600px) {
 
@@ -116,6 +140,18 @@ ul, ol {
   width: 100px;
 }
 
+.subline {
+  text-align: center;
+}
+
+.movie-info h1 {
+  text-align: center;
+}
+
+.movie-rating {
+  justify-content: center;
+}
+
 }
 
 
@@ -127,15 +163,15 @@ ul, ol {
 }
 
   .burgerMenu__nav {
+    
     flex-direction: column;
     gap: 20px;
+    margin-top: 50%;
   }
   
   .burgerMenu__nav-btn {
     font-size: 28px;
   }
-
-  
 
 
 }
