update: responsive styles

--- a/src/pages/MainPage/MainPageMovieList/MainPageMovieList.scss
+++ b/src/pages/MainPage/MainPageMovieList/MainPageMovieList.scss
@@ -5,7 +5,7 @@
       flex-wrap: wrap;
       margin: 10px 0 0 0;
       row-gap: 40px;
-      justify-content: flex-start;
+      justify-content: space-around;
     }
   
     &-bottom {
