--- a/src/pages/TrendsPage/TrendMovieList/TrendMovieList.scss
+++ b/src/pages/TrendsPage/TrendMovieList/TrendMovieList.scss
@@ -1,9 +1,9 @@
 .movies {
   margin: 0 0 0 0;
 
-  &-container {
-    justify-content: flex-start;
-  }
+  // &-container {
+  //   justify-content: flex-start;
+  // }
 
   &-bottom {
     margin-top: 32px;
