--- a/src/pages/MoviePage/MoviePage.scss
+++ b/src/pages/MoviePage/MoviePage.scss
@@ -1,74 +1,92 @@
-
 .movie-details {
   display: flex;
   width: max-content;
   gap: 42px;
-  
   margin-top: 30px;
-
-  .movie-info {
-    &--plot {
-      width: 100%;
-  max-width: 600px;
-  word-wrap: break-word;
-    }
-
-    
-
-    h2 {
-      color: #afb2b6;
-    }
-
-    ul {
-      li {
-        margin: 20px 0;
-        list-style-type: none;
-      }
-    }
-
-    .movie-rating {
-      display: flex;
-      gap: 10px;
-      padding-top: 20px;
-      padding-bottom: 20px;
-
-      &--green {
-        background-color: #00a340;
-      }
-    }
-
-    span {
-      padding: 2px 8px;
-      background: rgb(255 255 255 / 19%);
-      border-radius: 16px;
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(10.4px);
-
-     
-    }
-
-    &--genres {
-      display: flex;
-      gap: 54px;
-
-    }
-  }
 }
 
 
-  .dribbble {
-    position: fixed;
-    display: block;
-    right: 20px;
-    bottom: 20px;
+.movie-details--plot {
+  
+  max-width: 600px;
+  word-wrap: break-word;
+}
 
-    img {
-      display: block;
-      height: 28px;
-    }
-  }
+.movie-details h2 {
+  color: #afb2b6;
+}
 
+.movie-details ul {
+  list-style-type: none;
+}
 
+.movie-details li {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.movie-rating {
+  display: flex;
+  gap: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.movie-rating--green {
+  background-color: #00a340;
+}
+
+.movie-info--list {
+  color: #afb2b6;
+}
+
+.movie-info--value {
+  color: white;
+  font-weight: 500;
+}
+
+.movie-details--genres {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  gap: 10px;
+}
+
+.movie-details--genres li {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.movie-details--genres .movie-info--list {
+  font-weight: bold;
+}
+
+.movie-rating span {
+  background-color: rgba(255, 255, 255, 0.185);;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.movie-info--list-label {
+  background-color: rgba(255, 255, 255, 0.185);;
+  padding: 5px;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+
+.dribbble {
+  position: fixed;
+  display: block;
+  right: 20px;
+  bottom: 20px;
+}
+
+.dribbble img {
+  display: block;
+  height: 28px;
+}
 
 .share-buttons {
   margin-top: 20px;
@@ -81,18 +99,11 @@
   font-weight: 200;
 }
 
-
-
 @media (max-width: 1024px) {
-
-  .movie-details .movie-info--plot {
+  .movie-details--plot {
     max-width: 350px;
   }
-
-  
 }
-
-
 
 @media (max-width: 480px) {
   .movie-details {
@@ -101,10 +112,7 @@
     gap: 20px;
   }
 
- 
-
-  .movie-details .movie-info--genres {
-    flex-wrap: wrap;
+  .movie-details--genres {
     justify-content: center;
     gap: 10px;
   }
