--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -152,6 +152,10 @@ ul, ol {
   justify-content: center;
 }
 
+.search-input {
+  width: 70%;
+}
+
 }
 
 
@@ -183,4 +187,8 @@ ul, ol {
     height: 50px;
    }
 
+   .footer {
+    background-color: #130429;
+   }
 }
+
