--- a/src/pages/TrendsPage/TrendMovieList/TrendMovieList.scss
+++ b/src/pages/TrendsPage/TrendMovieList/TrendMovieList.scss
@@ -1,10 +1,6 @@
 .movies {
   margin: 0 0 0 0;
-
-  // &-container {
-  //   justify-content: flex-start;
-  // }
-
+  padding-top: 10px;
   &-bottom {
     margin-top: 32px;
     text-align: center;
