--- a/src/components/Layouts/Header/Header.scss
+++ b/src/components/Layouts/Header/Header.scss
@@ -2,7 +2,7 @@
   height: 84px;
   display: flex;
   align-items: center;
-  
+  justify-content: space-evenly;
 
   &__box {
     display: flex;
@@ -65,9 +65,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  margin-left: 30px;
-  padding-left: 25px;
-  padding-right: 25px;
+ 
 }
 
 .logo {
