--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -37,6 +37,10 @@
     
   }
 
+  .movie-info--plot {
+    width: 30%;
+  }
+
 }
 
 
@@ -70,6 +74,10 @@
   }
   }
 
+
+  .movie-info--plot {
+    width: 90%;
+  }
 
   .share-buttons {
     gap: 15px;
@@ -135,8 +143,19 @@
 
 @media (max-width: 500px) {
 
+.search {
+  width: 200px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.search-input {
+  width: 100%;
+}
+
 .movie-poster--img {
 margin-left: 0px;
+width: 220px;
 }
 
 ul, ol {
@@ -155,9 +174,15 @@ ul, ol {
   justify-content: center;
 }
 
-.search-input {
-  width: 70%;
+.logo {
+  display: none;
 }
+
+.header {
+  justify-content: center;
+  padding-bottom: 25px;
+}
+
 
 }
 
@@ -194,4 +219,6 @@ ul, ol {
     background-color: #130429;
    }
 }
+
+
 
